# SOLotery

./: .gitignore  Anchor.toml  Cargo.toml  README.md  lib.rs  package.json
.github/workflows/: ci.yml
programs/solotery/: Cargo.toml
programs/solotery/src/: errors.rs  lib.rs
programs/solotery/src/instructions/: initialize.rs  mod.rs  select_winner.rs  ticket.rs  transfer_to_winner.rs
programs/solotery/src/state/: accounts.rs  mod.rs
programs/solotery/src/utils/: consts.rs  functions.rs  mod.rs
tests/: createLotery.ts  requestTicket.ts
