[package]
name = "solotery"
version = "0.1.0"
description = ""
edition = "2021"
authors = ["Mateo Lafalce <mateo.lafalce04@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solotery"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
oorandom = "11.1.3"
