[package]
name = "solotery"
version = "1.0.0"
description = ""
edition = "2021"
authors = ["Mateo Lafalce <mateolafalce@protonmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solotery"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
oorandom = "11.1.3"
